force-app/main/default/objects/ProcessLogRecords__e/ProcessLogRecords__e.object-meta.xml
<CustomObject>
    <label>Registro de Process Log</label>
    <pluralLabel>Registros de Process Logs</pluralLabel>
</CustomObject>