force-app/main/default/objects/ProcessLogRecords__e/fields/InternalError__c.field-meta.xml
<CustomField>
    <fullName>InternalError__c</fullName>
    <label>Erro interno</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>