force-app/main/default/objects/ProcessLogRecords__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>ID do registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>