force-app/main/default/objects/ProcessLogRecords__e/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Requisição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>