force-app/main/default/objects/ProcessLogRecords__e/fields/RequestDirection__c.field-meta.xml
<CustomField>
    <fullName>RequestDirection__c</fullName>
    <label>Direção da requisição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>