force-app/main/default/objects/ProcessLogRecords__e/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Resposta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>