force-app/main/default/objects/ProcessLogRecords__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>